# fortifier

./: .gitignore  .pre-commit-config.yaml  .prettierrc.json  Cargo.toml  README.md  deny.toml  package-lock.json  package.json
.github/workflows/: ci.yml  publish.yml  release.yml  website.yml
benchmarks/compile/: Cargo.toml  run.sh
benchmarks/compile/src/: lib.rs  structs_10_fields_10.rs  structs_1_fields_10.rs
book/: book.toml
book/src/: SUMMARY.md  getting-started.md  installation.md  introduction.md
book/src/validate/: README.md
book/src/validations/: README.md  email-address.md  email.md  length.md  phone-number.md  range.md  regular-expression.md  url.md
example/: Cargo.toml
example/src/: main.rs
examples/basic/: Cargo.toml
examples/basic/src/: email_address.rs  main.rs  user.rs
examples/generics/: Cargo.toml
examples/generics/src/: action.rs  bounds.rs  main.rs
examples/server/: Cargo.toml
examples/server/src/: email_address.rs  main.rs  routes.rs  user.rs
examples/server/src/email_address/: entities.rs  schemas.rs
examples/server/src/user/: entities.rs  routes.rs  schemas.rs
