[workspace]
members = ["example", "packages/*"]
resolver = "2"

[workspace.package]
authors = ["Rust for Web <info@rustforweb.org>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/RustForWeb/fortifier"
version = "0.0.1"

[workspace.dependencies]
fortifier = { path = "./packages/fortifier", version = "0.0.1" }
fortifier-macros = { path = "./packages/fortifier-macros", version = "0.0.1" }
regex = "1.12.2"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = "1.48.0"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
panic = "deny"
unwrap_used = "deny"
