[workspace]
members = ["benchmarks/*", "examples/*", "packages/*"]
resolver = "2"

[workspace.package]
authors = ["Rust for Web <info@rustforweb.org>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/RustForWeb/fortifier"
version = "0.2.3"

[workspace.dependencies]
chrono = "0.4.42"
email_address = { version = "0.2.9", default-features = false }
fortifier = { path = "./packages/fortifier", version = "0.2.0" }
fortifier-macros = { path = "./packages/fortifier-macros", version = "0.2.0" }
indexmap = "2.12.0"
phonenumber = "0.3.7"
pretty_assertions = "1.4.1"
regex = "1.12.2"
rust_decimal = "1.39.0"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = "1.48.0"
url = "2.5.7"
utoipa = "5.4.0"
uuid = "1.19.0"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
panic = "deny"
unwrap_used = "deny"
