[package]
name = "fortifier-example"
description = "Fortifier example."

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
fortifier = { workspace = true, features = ["email", "regex", "url"] }
regex.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
