[package]
name = "fortifier-example-generics"
description = "Fortifier generics example."
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
fortifier = { workspace = true, features = ["email-address", "serde"] }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["serde"] }

[lints]
workspace = true
